# family-office

./: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  Makefile  Orçamento Sistema de Family Office Digital.md  README-Docker.md  README.md  ROADMAP.md  TRANSACTIONS_USAGE.md  ativos_exemplo.csv  ativos_exemplo.xlsx  docker-compose.yml  fix_assets_table.py  local.db  output.txt  package-lock.json  package.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  requisitos.txt  seed.py  superuser.py
app/: __init__.py
app/config/: config.py  extensions.py
app/constants/: asset_types.py  permissions.py
app/controllers/: admin_controller.py  asset_controller.py  dashboard_controller.py  family_controller.py  permission_controller.py  risk_analysis_controller.py  transaction_controller.py
app/decorators/: family_access.py  permissions.py
app/models/: __init__.py  alert.py  asset.py  family.py  job_log.py  permission.py  quote_history.py  suitability.py  transaction.py  user.py
app/routes/: __init__.py  asset.py  auth.py  family.py  health.py  permission.py  permission_routes.py  reports.py  risk_analysis.py  transaction.py
app/schema/: alert_schema.py  asset_schema.py  family_schema.py  permission_schema.py  transaction_schema.py  (+1 more)
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
migrations/: env.py
scripts/: README.md  clear_alerts.py  clear_alerts.sh  create_family.py  create_family.sh
tests/: conftest.py  test_assets.py  test_auth.py  test_dashboard.py  test_family.py
(+85 files in other folders)
