[project]
name = "family-office"
version = "0.1.0"
description = ""
authors = [
    {name = "MarcosCastelo",email = "marcosvitorcastelo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-restx (>=1.3.0,<2.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "weasyprint (>=65.1,<66.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pdfminer-six (>=20250506,<20250507)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "marshmallow (>=4.0.0,<5.0.0)",
    "marshmallow-sqlalchemy (>=1.4.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "family_office", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
coverage = "^7.9.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"